# fillup

./: .gitignore  Makefile.am  autogen.sh  configure.ac
SRC/: consume.c  file.c  metadata.c  parameters.c  parser.c  services.c
TEST/FCSR/SRC/: CreateRemoved.c
man/: fillup.xml
src/: Makefile  parser.c  services.c
